<resources>
    <string name="app_name">Effoi</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_category">Effoi</string>
    <string name="pizza_btn">Pizza</string>
    <string name="hot_btn">Hot Beverages</string>
    <string name="salad_btn">Salad</string>
    <string name="shots_btn">Shots</string>
    <string name="title_activity_splash">Effoi</string>
    <string name="logo">logo</string>
    <string name="price">Price</string>
    <string name="food_name">Food Name</string>
    <string name="food_image">Food Image</string>
    <string name="food_desc">Food Item Description</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="orderbtn">Finish Order</string>
    <string-array name="mins">
        <item name="ten">15 Minuites</item>
        <item name="ten">30 Minuites</item>
        <item name="ten">40 Minuites</item>
        <item name="ten">60 Minuites</item>
    </string-array>
</resources>
