<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="#f5f6e5"
    tools:showIn="@layout/activity_category" tools:context="com.example.yilma.efoymenu.Category">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/c"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/logo"
        android:layout_marginBottom="13dp" />

    <Button
        android:background="@drawable/btn_bg"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/pizza_btn"
        android:id="@+id/pizza_btn"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:padding="10dp" />

    <Button
        android:onClick="onClick"
        android:background="@drawable/btn_bg"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/hot_btn"
        android:id="@+id/hot_btn"
        android:layout_below="@+id/pizza_btn"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:padding="10dp" />

    <Button
        android:onClick="onClick"
        android:background="@drawable/btn_bg"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/salad_btn"
        android:id="@+id/salad_btn"
        android:layout_below="@+id/hot_btn"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:padding="10dp" />

    <Button
        android:background="@drawable/btn_bg"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/shots_btn"
        android:id="@+id/shots_btn"
        android:layout_below="@+id/salad_btn"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:onClick="onClick"
        android:padding="10dp" />


</RelativeLayout>
