<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="1.5dp"
        card_view:cardElevation="5dp"
        card_view:cardBackgroundColor="#51b7b7b7"
        card_view:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/btn_bg"
            android:clickable="true">
            <ImageView
                android:id="@+id/imageView"
                android:tag="image_tag"
                android:layout_gravity="left"
                android:layout_margin="0dp"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/food_image" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:padding="5dp"
                android:paddingTop="8dp">

                <TextView
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    fontPath = "fonts/chalkitup.ttf"
                    android:text="@string/food_name"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="23sp"
                    android:textColor="#e58302"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix"/>
                <!--<TextView-->
                <!--android:id="@+id/textViewcategory"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="right"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:text="Category"-->
                <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
                <!--/>-->


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginTop="15dp">
                    <TextView
                        android:id="@+id/textViewDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="4dp"
                        android:textSize="14.5sp"
                        android:layout_margin="5dp"
                        android:text="@string/food_desc"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                </LinearLayout>
                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="left"
                    android:src="@drawable/chili"/>
                <TextView
                    android:id="@+id/textViewPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:text="@string/price"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#c63838"
                    android:layout_marginTop="2dp" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>